// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should render ExpenseSummary with multiple items 1`] = `
<div>
  <div>
     You have 
    4 Expenses
     in summary of 
    $23,423,423.42
     
  </div>
</div>
`;

exports[`Should render ExpenseSummary with one item 1`] = `
<div>
  <div>
     You have 
    1 Expense
     in summary of 
    $12,412.24
     
  </div>
</div>
`;
